fix: 404 page and No search result page with no sidebar all the default spacing fixed.

--- a/assets/css/unminified/skin-1.css
+++ b/assets/css/unminified/skin-1.css
@@ -1237,6 +1237,13 @@ body {
   .ast-separate-container .no-results {
     padding: 2em;
   }
+  .ast-separate-container.ast-no-sidebar .ast-404-layout-1,
+  .ast-separate-container.ast-no-sidebar .no-results {
+    margin-bottom: 0;
+  }
+  .ast-separate-container.ast-no-sidebar.search-no-results #primary, .ast-separate-container.ast-no-sidebar.error404 #primary {
+    padding-bottom: 0;
+  }
 }
 
 @media (min-width: 1201px) {
